--- a/force-app/main/default/lwc/lds/lds.css
+++ b/force-app/main/default/lwc/lds/lds.css
@@ -1,5 +1,14 @@
 .ba{
     background-image: url("https://cdn.pixabay.com/photo/2023/01/29/06/48/icons-7752534__340.jpg");
    border: 1px solid aqua;
-   https://cdn.pixabay.com/photo/2023/01/23/15/54/grey-wolf-7739013__340.jpg
+   border-radius: 3px;
+   padding: 5px;
+
 }
+.myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
